--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
     </div>
     <footer>
         <div class="container">
-            <p>Made by Code Institute bootcampers</p>
+            <p>Developed by Dan Casey</p>
         </div>
     </footer>
 </body>
