--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -8,12 +8,10 @@
 
     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-display">
 
-        <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
 
         <div class="caption">
-            <h3>{{ item.product.name }}</h3>
-            <p class="product-description">{{ item.product.description }}</p>
-            <p>{{ item.product.price }}</p>
+            <h3 class="product_name">{{ item.product.name }}</h3>
+            <p class="product_price">{{ item.product.price }}</p>
             <p>
 
                 <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
