--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -18,13 +18,10 @@
 
     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
         <div class="panel-body">
-            <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
-
             <div class="caption">
-                <h3>{{ item.product.name }}</h3>
-                <p class="product-description">{{ item.product.description }}</p>
-                <p>{{ item.quantity }}</p>
-                <p>{{ item.product.price }}</p>
+                <h3 class="product_name">{{ item.product.name }}</h3>
+                <p>Unit Price:{{ item.product.price }}</p>
+                <p>Quanity{{ item.quantity }}</p>
             </div>
         </div>
     </div>
