--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,15 @@
             </div>
         </div>
     </nav>
+    {% if messages %}
+    <div class="alert alert-success">
+        <div class="messages">
+            {% for message in messages %}
+            {{ message }}
+            {% endfor %}
+        </div>
+    </div>
+    {% endif %}
     <div class="container">
         {% block content %} {% endblock %}
     </div>
