--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} {% block page_title %}{{ user }}'s Profile{% endblock %} {% block page_heading %}{{ user }}'s Profile{% endblock %} {% block content %}
 <h2>Welcome, {{ user.username }}</h2>
 <p>{{ user.email }}</p>
+<p><a href="{% url 'newsample' %}">New Sample</a></p>
 {% endblock %}
