Set sample model dates not initially required null=True

--- a/samples/templates/soilsamplesubmit.html
+++ b/samples/templates/soilsamplesubmit.html
@@ -9,7 +9,7 @@
 
 
 
-<form role="form" method="post" id="" action="{% url 'submitsample' %}">
+<form role="form" method="post" id="" action="{% url 'newsample' %}">
 
     <div class="form-group col-md-6">
         {{ sample_form|as_bootstrap }}
