--- a/templates/base.html
+++ b/templates/base.html
@@ -32,12 +32,12 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="{% url 'products' %}"><i class="fab fa-product-hunt"></i> Products</a></li>
-                    {% if user.is_authenticated %}
                     {% if user.is_staff %}
                     <li><a href="{% url 'labportal' %}"><i class="fas fa-flask"></i> Lab Portal</a></li>
                     {% endif %}
-                    <li><a href="{% url 'profile' %}"><i class="fa fa-user"></i> Your Portal</a></li>
+                    <li><a href="{% url 'products' %}"><i class="fab fa-product-hunt"></i> Services</a></li>
+                    {% if user.is_authenticated %}
+                    <li><a href="{% url 'yourportal' %}"><i class="fa fa-user"></i> Your Portal</a></li>
                     <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out-alt"></i> Log Out</a></li>
                     {%  else %}
                     <li><a href="{% url 'register' %}"><i class="fa fa-user-plus"></i> Register</a></li>
