--- a/samples/templates/yourportal.html
+++ b/samples/templates/yourportal.html
@@ -1,21 +1,27 @@
 {% extends 'base.html' %} {% block page_title %}{{ user }}'s Profile{% endblock %} {% block page_heading %}{{ user }}'s Profile{% endblock %} {% block content %}
 <h2>Welcome, {{ user.username }}</h2>
 <p>{{ user.email }}</p>
-<p><a href="{% url 'newsample' %}">New Sample</a></p>
+<p><a class="btn btn-primary"href="{% url 'newsample' %}">New Sample</a></p>
 
 <div class="row">
     <table class="col-xs-12">
         <tr>
             <th>Sample Ref.</th>
             <th>Status</th>
-            <th>Customer Ref.</th>
+            <th></th>
         </tr>
         {% for sample in samples %}
-            <tr>
-                <td>{{ sample.sample_ref }}</td>
-                <td>{{ sample.status }}</td>
-                <td>{{ sample.customer_ref }}</td>
-            </tr>
+        <tr>
+            <td>{{ sample.sample_ref }}</td>
+            <td>{{ sample.status }}</td>
+            <td>
+                <form action="{% url 'viewreport' sample.id %}" method="post">
+                    {% csrf_token %}
+                    <input class="btn btn-primary" type="submit" value="View Report">
+                </form>
+
+            </td>
+        </tr>
         {% endfor %}
     </table>
 </div>
