--- a/samples/templates/sampledetails.html
+++ b/samples/templates/sampledetails.html
@@ -11,12 +11,27 @@
         });
     });
 </script>
+<script>
+    var x = document.getElementById("demo");
+    function getLocation() {
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(showPosition);
+        } else {
+            x.innerHTML = "Geolocation is not supported by this browser.";
+        }
+    }
+
+    function showPosition(position) {
+        x.innerHTML = "Latitude: " + position.coords.latitude +
+            "<br>Longitude: " + position.coords.longitude;
+    }
+</script>
 
 {% endblock %}
 
 {% block content %}
 
-
+<div id="demo"></div>
 <form role="form" method="post" id="" action="{% url 'newsample' %}">
     {% csrf_token %}
     <div class="form-group col-md-6">
