--- a/samples/templates/labportal.html
+++ b/samples/templates/labportal.html
@@ -1,5 +1,16 @@
 {% extends 'base.html' %} {% block page_title %}Lab Portal{% endblock %} {% block page_heading %}Lab Portal{% endblock %} {% block content %}
-
+<h3>Receive Sample</h3>
+<div class="row">
+    <form role="form" method="post" id="receive_form" action="{% url 'receive' %}">
+        {% csrf_token %}
+        <div class="form-group col-md-6">
+            <input type="text" name="sample_ref" class="form-control search-input" id="sample_ref" />
+        </div>
+        <div class="form-group col-md-12">
+            <input class="btn btn-primary" id="submit_sample_btn" name="commit" type="submit" value="Submit">
+        </div>
+    </form>
+</div>
 <div class="row">
     <table class="col-xs-12">
         <tr>
