--- a/samples/templates/labportal.html
+++ b/samples/templates/labportal.html
@@ -1,4 +1,10 @@
-{% extends 'base.html' %} {% block page_title %}Lab Portal{% endblock %} {% block page_heading %}Lab Portal{% endblock %} {% block content %}
+{% extends 'base.html' %}
+{% block page_title %}Lab Portal{% endblock %}
+{% block page_heading %}Lab Portal{% endblock %}
+{% load static from staticfiles %}
+{% load bootstrap_tags %}
+{% block content %}
+
 <h3>Receive Sample</h3>
 <div class="row">
     <form role="form" method="post" id="receive_form" action="{% url 'receive' %}">
@@ -11,6 +17,22 @@
         </div>
     </form>
 </div>
+
+<h3>Submit Results</h3>
+<div class="row">
+    <form role="form" method="post" id="" action="{% url 'results' %}">
+        {% csrf_token %}
+        <div class="form-group col-md-6">
+
+            {{ results_form|as_bootstrap }}
+
+        </div>
+        <div class="form-group col-md-12">
+            <input class="btn btn-primary" id="submit_sample_btn" name="commit" type="submit" value="Submit">
+        </div>
+    </form>
+</div>
+
 <div class="row">
     <table class="col-xs-12">
         <tr>
@@ -27,4 +49,4 @@
         {% endfor %}
     </table>
 </div>
-{% endblock %}
+    {% endblock %}
