--- a/samples/templates/labportal.html
+++ b/samples/templates/labportal.html
@@ -13,7 +13,7 @@
             <input type="text" name="sample_ref" class="form-control search-input" id="sample_ref" />
         </div>
         <div class="form-group col-md-12">
-            <input class="btn btn-primary" id="submit_sample_btn" name="commit" type="submit" value="Submit">
+            <input class="btn btn-primary" id="submit_sample_btn" name="commit" type="submit" value="Receive">
         </div>
     </form>
 </div>
