Update readme with features list

--- a/samples/templates/viewreport.html
+++ b/samples/templates/viewreport.html
@@ -18,7 +18,7 @@
                     <p>Sample Reference:</p>
                     <p>Customer Name:</p>
                     <p>Customer Reference:</p>
-                    <p>Sample Location:</p>
+                    <p>Sample location:</p>
                     <p>Sample Address:</p>
                     <p>Sample Date:</p>
                     <p>Soil Type:</p>
@@ -29,7 +29,7 @@
                     <p>{{ status.sample_ref }}</p>
                     <p>{{ details.customer_name }}</p>
                     <p>{{ details.customer_ref_1 }} {{ details.customer_ref_2 }}</p>
-                    <p>{{ details.sample_location }}</p>
+                    <p>Lat: {{ details.sample_location.latitude }}, Lng: {{ details.sample_location.longitude }}</p>
                     <p>{{ details.sample_address }}</p>
                     <p>{{ details.sample_date }}</p>
                     <p>{{ details.soil_type }}</p>
