--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Easca Environmental</title>
+    <title>Easca Environmental </title>
     <link rel="shortcut icon" href=""> <!-- To be removed for deployment  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/cerulean/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" type="text/css" />
@@ -13,6 +13,10 @@
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
+    {% block head_heading %}
+    {% endblock head_heading %}
 
     {% block head_js %}
     {% endblock head_js %}
@@ -32,6 +36,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a href="{% url 'index' %}"><i class="fas fa-info"></i> About</a></li>
                     {% if user.is_staff %}
                     <li><a href="{% url 'labportal' %}"><i class="fas fa-flask"></i> Lab Portal</a></li>
                     {% endif %}
