--- a/samples/templates/yourportal.html
+++ b/samples/templates/yourportal.html
@@ -4,55 +4,114 @@
 
 
 <h3>Submit Sample</h3>
-<div class="row">
-    <table class="col-xs-12">
-        <tr>
-            <th>Sample Ref.</th>
-            <th>Submit Details</th>
-        </tr>
-        {% for status in statuss %}
-            {% if status.status == "Ordered" %}
-        <tr>
-            <td>{{ status.sample_ref }}</td>
-            <td>
-        <form action="{% url 'submit' status.id %}" method="post">
-            {% csrf_token %}
-            <input class="btn btn-primary" type="submit" value="Submit Details">
-        </form>
-    </td>
+<p>
+    Below is list of samples awaiting for submission from you. <br />
+    Once you have collected your soil sample please submit the sample details referenceing the sample reference on the sample kit.
+</p>
+<div>
+    <div class="row">
+        <table class="col-xs-12">
+            <tr>
+                <th>Sample Ref.</th>
+                <th>Submit Details</th>
+            </tr>
+            {% for status in statuss %}
+            {% if status.status == "Dispatched" %}
+            <tr>
+                <td>{{ status.sample_ref }}</td>
+                <td>
+                    <form action="{% url 'submit' status.id %}" method="post">
+                        {% csrf_token %}
+                        <input class="btn btn-primary" type="submit" value="Submit Details">
+                    </form>
+                </td>
 
-        </tr>
+            </tr>
             {% endif %}
-        {% endfor %}
-    </table>
+            {% endfor %}
+        </table>
+    </div>
 </div>
-<h3>Processing Samples</h3>
-<div class="row">
-    <table class="col-xs-12">
-        <tr>
-            <th>Sample Ref.</th>
-            <th>Your Reference</th>
-            <th>Date Sampled</th>
-            <th>Status</th>
-            <th>View Report</th>
-        </tr>
-        {% for status in statuss %}
-            {% if status.status == "Submitted" or status.status == "Received" %}
+
+<h3>Completed Samples</h3>
+<p>
+    Below is list of completed samples. <br />
+    You can access the samples details and results by following the link on each line item.
+</p>
+<div>
+    <div class="row">
+        <table class="col-xs-12">
+            <tr>
+                <th>Sample Ref.</th>
+                <th>Your Reference</th>
+                <th>Date Sampled</th>
+                <th>Status</th>
+                <th>View Report</th>
+            </tr>
+            {% for status in statuss %}
+            {% if status.status == "Complete" %}
 
             <tr>
                 <td>{{ status.sample_ref }}</td>
 
 
                 {% for sample in details %}
-                    {% if sample.sample == status %}
-                    <td>
-                        {{ sample.customer_ref_1 }} {{ sample.customer_ref_2 }}
-                    </td>
-                    <td>
-                        {{ sample.sample_date }}
-                    </td>
+                {% if sample.sample == status %}
+                <td>
+                    {{ sample.customer_ref_1 }} {{ sample.customer_ref_2 }}
+                </td>
+                <td>
+                    {{ sample.sample_date }}
+                </td>
 
-                    {% endif %}
+                {% endif %}
+                {% endfor %}
+                <td>{{ status.status }}</td>
+                <td>
+                    <form action="{% url 'viewreport' status.id %}" method="post">
+                        {% csrf_token %}
+                        <input class="btn btn-primary" type="submit" value="View Report">
+                    </form>
+                </td>
+            </tr>
+            {% endif %}
+            {% endfor %}
+        </table>
+    </div>
+</div>
+
+<h3>Samples Being Processed</h3>
+<p>
+    Below is a list of samples being processed by Easca Environmental.
+    <br />It includes samples you have ordered, that we have yet to dispatch, as well as samples you have submitted and are awaiting results.
+</p>
+<div>
+    <div class="row">
+        <table class="col-xs-12">
+            <tr>
+                <th>Sample Ref.</th>
+                <th>Your Reference</th>
+                <th>Date Sampled</th>
+                <th>Status</th>
+                <th>View Report</th>
+            </tr>
+            {% for status in statuss %}
+            {% if status.status == "Ordered" or status.status == "Submitted" or status.status == "Received" %}
+
+            <tr>
+                <td>{{ status.sample_ref }}</td>
+
+
+                {% for sample in details %}
+                {% if sample.sample == status %}
+                <td>
+                    {{ sample.customer_ref_1 }} {{ sample.customer_ref_2 }}
+                </td>
+                <td>
+                    {{ sample.sample_date }}
+                </td>
+
+                {% endif %}
                 {% endfor %}
                 <td>{{ status.status }}</td>
 
@@ -64,47 +123,8 @@
                 </td>
             </tr>
             {% endif %}
-        {% endfor %}
-    </table>
-</div>
-<h3>Completed Samples</h3>
-<div class="row">
-    <table class="col-xs-12">
-        <tr>
-            <th>Sample Ref.</th>
-            <th>Your Reference</th>
-            <th>Date Sampled</th>
-            <th>Status</th>
-            <th>View Report</th>
-        </tr>
-        {% for status in statuss %}
-        {% if status.status == "Complete" %}
-
-        <tr>
-            <td>{{ status.sample_ref }}</td>
-
-
-            {% for sample in details %}
-            {% if sample.sample == status %}
-            <td>
-                {{ sample.customer_ref_1 }} {{ sample.customer_ref_2 }}
-            </td>
-            <td>
-                {{ sample.sample_date }}
-            </td>
-
-            {% endif %}
             {% endfor %}
-            <td>{{ status.status }}</td>
-            <td>
-                <form action="{% url 'viewreport' status.id %}" method="post">
-                    {% csrf_token %}
-                    <input class="btn btn-primary" type="submit" value="View Report">
-                </form>
-            </td>
-        </tr>
-        {% endif %}
-        {% endfor %}
-    </table>
+        </table>
+    </div>
 </div>
 {% endblock %}
