--- a/samples/templates/labportal.html
+++ b/samples/templates/labportal.html
@@ -124,7 +124,7 @@
     <div class="row">
         <a data-toggle="collapse" href="#archive_collapse" role="button" aria-expanded="true" aria-controls="#archive_collapse">
             <div class="pull-left">
-                <h3>Archive Sample</h3>
+                <h3>Sample Archive</h3>
             </div>
             <div class="pull-right">
                 <h3><i class="fas fa-plus"></i></h3>
