Instruct customer only dispatched samples can be submimtted

--- a/samples/templates/yourportal.html
+++ b/samples/templates/yourportal.html
@@ -16,7 +16,7 @@
     </div>
     <div class="collapse submit_collapse collapse_xs" id="submit_collapse">
         <p>
-            Below is list of samples awaiting for submission from you. <br />
+            Below is list of samples awaiting for submission from you. Only samples that have been dispatched from our lab can be submitted.<br />
             Once you have collected your soil sample please submit the sample details referenceing the sample reference on the sample kit.
         </p>
         <div class="container">
